[gd_scene load_steps=7 format=3 uid="uid://cnhplbnrissbk"]

[ext_resource type="Script" uid="uid://pgvvkt03gd4h" path="res://character/script/characterMain.gd" id="1_mckyr"]
[ext_resource type="Shader" uid="uid://cxw6mrrth8j4e" path="res://character/script/hueShift.gdshader" id="2_uvy8k"]
[ext_resource type="SpriteFrames" uid="uid://c4n6nlff3xs4t" path="res://character/default.res" id="3_hx151"]
[ext_resource type="Theme" uid="uid://c1dvvepurn0hf" path="res://character/textTheme.tres" id="9_mckyr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5covf"]
shader = ExtResource("2_uvy8k")
shader_parameter/hue = 0.0
shader_parameter/saturation = 1.0
shader_parameter/value = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jsvmi"]
size = Vector2(96, 96)

[node name="cannyan" type="CharacterBody2D"]
collision_mask = 2
input_pickable = true
script = ExtResource("1_mckyr")

[node name="sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_5covf")
scale = Vector2(2, 2)
sprite_frames = ExtResource("3_hx151")
animation = &"idle"

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jsvmi")

[node name="Nametag" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -71.0
offset_right = 32.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(32, 23)
theme = ExtResource("9_mckyr")
theme_override_colors/font_outline_color = Color(0.2784314, 0.32156864, 0.32941177, 1)
theme_override_constants/outline_size = 9
text = "캔냥이"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ChatContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -111.0
offset_right = 20.0
offset_bottom = -71.0
grow_horizontal = 2
theme_override_constants/separation = 15
alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
